<resources>
    <string name="app_name">Calc</string>
    <string name="header">BSCS MY CALCULATOR</string>
    <string name="mult">MULT</string>
    <string name="div">DIV</string>
    <string name="sub">SUB</string>
    <string name="add">ADD</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="refresh">REFRESH</string>
    <string name="_0">0</string>
    <string name="number1">NUMBER1</string>
    <string name="operand">OPERAND</string>
    <string name="number2">NUMBER2</string>
    <string name="answer">ANSWER</string>
    <string name="_10">=</string>
</resources>