<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/header"
       android:text="@string/header"
       android:padding="20dp"
       android:background="@color/black"
       android:textColor="@color/white"
       android:textAlignment="center"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       />

    <Button
        android:id="@+id/mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/div"
        app:layout_constraintEnd_toStartOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/header"
        />

    <Button
        android:id="@+id/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sub"
        app:layout_constraintEnd_toStartOf="@id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/mult" />

    <Button
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn7"
        app:layout_constraintBottom_toTopOf="@id/add"
        app:layout_constraintTop_toBottomOf="@+id/div" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@+id/sub"
        app:layout_constraintEnd_toStartOf="@id/btn0"
        app:layout_constraintBottom_toTopOf="@id/num1"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:layout_constraintStart_toEndOf="@id/mult"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintBottom_toTopOf="@id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/header"
        />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintStart_toEndOf="@id/div"
        app:layout_constraintEnd_toStartOf="@id/btn5"
        app:layout_constraintBottom_toTopOf="@id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintStart_toEndOf="@id/sub"
        app:layout_constraintEnd_toStartOf="@id/btn8"
        app:layout_constraintBottom_toTopOf="@id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        />
    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintBottom_toTopOf="@id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/header"
        />
    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn5"
        app:layout_constraintBottom_toTopOf="@id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintBottom_toTopOf="@id/refresh"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />
    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@id/btn3"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintBottom_toTopOf="@id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/header" />
    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@id/btn6"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintBottom_toTopOf="@id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />
    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@id/btn9"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintBottom_toTopOf="@id/refresh"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />
    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@id/add"
        app:layout_constraintEnd_toStartOf="@id/equal"
        app:layout_constraintBottom_toTopOf="@id/num1"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />
    <Button
        android:id="@id/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        app:layout_constraintStart_toEndOf="@id/btn0"
        app:layout_constraintEnd_toStartOf="@id/refresh"
        app:layout_constraintBottom_toTopOf="@id/enum1"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
       android:id="@+id/refresh"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/refresh"
       app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/equal"
        app:layout_constraintBottom_toTopOf="@id/enum1"
       app:layout_constraintTop_toBottomOf="@+id/btn9" />




    <TextView
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/number1"
        app:layout_constraintTop_toBottomOf="@id/add"
        app:layout_constraintBottom_toTopOf="@id/num2"
        app:layout_constraintEnd_toStartOf="@id/enum1"
        app:layout_constraintStart_toStartOf="parent"
        />


    <EditText
        android:id="@+id/enum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/number1"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/enum2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/num1"
        app:layout_constraintTop_toBottomOf="@id/refresh" />




     <TextView
          android:id="@+id/num2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="15dp"
          android:text="@string/number2"
          app:layout_constraintTop_toBottomOf="@id/num1"
        app:layout_constraintBottom_toTopOf="@id/operand"
        app:layout_constraintEnd_toStartOf="@id/enum2"
          app:layout_constraintStart_toStartOf="parent"
          />


    <EditText
        android:id="@+id/enum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/number2"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/eoperand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/num2"
        app:layout_constraintTop_toBottomOf="@id/enum1" />


      <TextView
          android:id="@+id/operand"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="15dp"
          android:text="@string/operand"
          app:layout_constraintTop_toBottomOf="@id/num2"
          app:layout_constraintBottom_toTopOf="@id/answer"
          app:layout_constraintEnd_toStartOf="@id/eoperand"
          app:layout_constraintStart_toStartOf="parent"
          />


    <EditText
        android:id="@+id/eoperand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/operand"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/eanswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/operand"
        app:layout_constraintTop_toBottomOf="@id/enum2" />



      <TextView
          android:id="@+id/answer"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="15dp"
          android:text="@string/answer"
          app:layout_constraintTop_toBottomOf="@id/operand"
          app:layout_constraintEnd_toStartOf="@id/eanswer"
          app:layout_constraintStart_toStartOf="parent"
          />


    <EditText
        android:id="@+id/eanswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/answer"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/answer"
        app:layout_constraintTop_toBottomOf="@id/eoperand" />









</androidx.constraintlayout.widget.ConstraintLayout>